# payload-sim

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  Requirements Specification.md  Requirements Traceability Matrix.md  Risk Analysis.md
docs/: Requirements Specification.md  Requirements Traceability Matrix.md  Risk Analysis.md  index.html  index.js
src/: main.cpp
src/sim/: ISystem.h  SimulationEngine.h  SimulationState.h
src/sim/systems/: DepthSystem.h  EnvironmentSystem.h  FriendlySafetySystem.cpp  FriendlySafetySystem.h  LaunchSequenceHandler.cpp  LaunchSequenceHandler.h  MissileSystem.cpp  MissileSystem.h  PowerSystem.h  SafetySystem.cpp  SafetySystem.h  SonarSystem.h  TargetAcquisitionSystem.h  TargetValidationSystem.h  TargetingSystem.h
src/sim/systems/LaunchSequenceHandler/: ArmedPhase.cpp  ArmedPhase.h  ArmingPhase.cpp  ArmingPhase.h  AuthorizationPhase.cpp  AuthorizationPhase.h  AuthorizedPhase.cpp  AuthorizedPhase.h  CommonTypes.h  CurrentLaunchPhase.cpp  CurrentLaunchPhase.h  IdlePhase.cpp  IdlePhase.h  LaunchPhase.h  LaunchSequenceHandler.cpp  LaunchSequenceHandler.h  LaunchingPhase.cpp  LaunchingPhase.h  PhaseSurveillance.cpp  PhaseSurveillance.h  ResetPhase.h  ResettingPhase.cpp  ResettingPhase.h
src/sim/world/: ContactManager.cpp  ContactManager.h  CrosshairManager.cpp  CrosshairManager.h  MissileManager.cpp  MissileManager.h  MissionInstructionManager.h
src/simulation/: SimulationEngine.cpp  SimulationEngine.h
src/systems/: ContactManager.cpp  ContactManager.h  DepthControl.cpp  DepthControl.h  EnvironmentSystem.cpp  EnvironmentSystem.h  MissileRenderer.cpp  MissileRenderer.h  PowerSystem.cpp  PowerSystem.h  SafetySystem.cpp  SafetySystem.h  SonarSystem.cpp  SonarSystem.h  TargetingSystem.cpp  TargetingSystem.h
src/ui/: AuthCode.cpp  AuthCode.h  ControlsPanel.cpp  ControlsPanel.h  InputHandler.cpp  InputHandler.h  InteractiveControls.cpp  InteractiveControls.h  LoggingSystem.cpp  LoggingSystem.h  SonarDisplay.cpp  SonarDisplay.h  StatusPanel.cpp  StatusPanel.h  UIRoot.h  UiController.cpp  UiController.h  Widget.h
src/ui/views/: ContactView.h  ControlPanel.cpp  ControlPanel.h  ControlsPanel.h  CrosshairView.cpp  CrosshairView.h  DepthView.h  GuidanceView.h  LogPanel.h  MissileView.h  PowerView.h  SonarView.h  StatusPanel.h
src/ui/views/ControlPanel/: AuthCodePanel.cpp  AuthCodePanel.h  ControlPanel.cpp  ControlPanel.h  KeypadPanel.cpp  KeypadPanel.h  LaunchPhaseDisplay.cpp  LaunchPhaseDisplay.h  LaunchSequencePanel.cpp  LaunchSequencePanel.h
src/ui/widgets/: Button.h  Indicator.h  InputBox.h  PulsatingBorder.h  Slider.h  Switch.h  TextBox.h  Throttle.h
tests/: CMakeLists.txt  integration_test_LaunchSequence.cpp  test_contact_manager.cpp  test_depth_control.cpp  test_enemy_interactions.cpp  test_interactive_controls.cpp  test_main.cpp  test_power_system.cpp  test_power_ui_integration.cpp  test_safety_system.cpp  test_simulation_engine.cpp  test_sonar_system.cpp  test_ui_components.cpp
tests/sim/: test_ISystem.cpp  test_SimulationEngine.cpp  test_SimulationState.cpp
tests/sim/systems/: test_DepthSystem.cpp  test_EnvironmentSystem.cpp  test_FriendlySafetySystem.cpp  test_MissileSystem.cpp  test_PowerSystem.cpp  test_SonarSystem.cpp  test_TargetAcquisitionSystem.cpp  test_TargetValidationSystem.cpp  test_TargetingSystem.cpp
tests/sim/systems/LaunchSequenceHandler/: test_ArmedPhase.cpp  test_ArmingPhase.cpp  test_AuthorizedPhase.cpp  test_CurrentLaunchPhase.cpp  test_IdlePhase.cpp  test_LaunchSequenceHandler.cpp  test_LaunchedPhase.cpp  test_LaunchingPhase.cpp  test_PhaseSurveillance.cpp  test_ResettingPhase.cpp
tests/sim/world/: test_ContactManager.cpp  test_CrosshairManager.cpp  test_MissileManager.cpp  test_MissionInstructionManager.cpp
tests/ui/: test_UIRoot.cpp  test_Widget.cpp
tests/ui/views/: test_ContactView.cpp  test_CrosshairView.cpp  test_DepthView.cpp  test_GuidanceView.cpp  test_MissileView.cpp  test_PowerView.cpp  test_SonarView.cpp  test_StatusPanel.cpp
tests/ui/views/ControlPanel/: test_AuthCodePanel.cpp  test_ControlPanel.cpp  test_KeypadPanel.cpp  test_LaunchPhaseDisplay.cpp  test_LaunchSequencePanel.cpp
tests/ui/widgets/: test_Button.cpp  test_Indicator.cpp  test_PulsatingBorder.cpp  test_Switch.cpp  test_TextBox.cpp  test_Throttle.cpp
web/: CMakeLists_Web.txt  build_web.bat  payload-sim.html  payload-sim.js  payload-sim.wasm  shell.html
